--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/cal.svg" />
   <meta name="google-adsense-account" content="ca-pub-7906696637723167">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7906696637723167" crossorigin="anonymous"></script>
 </head>
 
 <body>
